Fix window too tiny and cause overflow in Windows

--- a/src/renderer/globals.scss
+++ b/src/renderer/globals.scss
@@ -5,3 +5,11 @@ $mainHeaderHeight: 40px;
 
 $standardWhite: rgb(242, 238, 226);
 $standardBlack: rgb(21, 15, 15);
+
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  font-family: $defaultFont;
+}
